@startuml
skinparam classAttributeIconSize 0

package "authz" {
    class User {
        - Email id
        - Password password
        - String name
        - Set<UserRole> roles
        + hasPassword(pwd): boolean
        + addRole(role): boolean
        + hasRole(roleId): boolean
    }

    class UserRole {
        - String id
        - String description
        + hasId(id): boolean
    }

    class Email
    class Password

    User --> UserRole : has
    User --> Email
    User --> Password
}

package "persistence.interfaces" {
    interface AuthenticationRepository {
        + doLogin(email, pwd): boolean
        + doLogout()
        + isLoggedIn(): boolean
        + getUserRoles(): List<UserRoleDTO>
        + getCurrentUserSession(): UserSession
        + addUserRole(id, desc): boolean
        + addUserWithRole(name, email, pwd, roleId): boolean
    }
}

package "persistence.jpa" {
    class AuthenticationRepositoryJPAImpl {
        - UserRoleRepository roleRepository
        + saveUser(User)
        + saveRole(UserRole)
        + findById(Email): User
    }
    AuthenticationRepositoryJPAImpl ..|> AuthenticationRepository
}

package "persistence.inmemory" {
    class InMemoryAuthenticationRepository {
        - AuthFacade authenticationFacade
        + addUserRole(id, desc): boolean
        + addUserWithRole(name, email, pwd, roleId): boolean
    }
    InMemoryAuthenticationRepository ..|> AuthenticationRepository
}

package "controller" {
    class AuthenticationController {
        - AuthenticationRepository authRepository
        + doLogin(email, pwd): boolean
        + getUserRoles(): List<UserRoleDTO>
        + doLogout()
    }
}

package "framework.auth" {
    class AuthFacade {
        - UserStore users
        - UserRoleStore roles
        + doLogin(email, pwd): UserSession
        + doLogout()
        + addUserWithRole(...)
    }

    class UserSession {
        - User user
        + isLoggedIn(): boolean
        + getUserId(): Email
        + getUserRoles(): List<UserRoleDTO>
    }
}

AuthenticationController --> AuthenticationRepository : uses
AuthenticationRepositoryJPAImpl --> User
AuthenticationRepositoryJPAImpl --> UserRole

InMemoryAuthenticationRepository --> AuthFacade
AuthFacade --> UserSession
AuthFacade --> User
AuthFacade --> UserRole

UserSession --> User
@enduml
